resolving too many redirects issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
 		"noUncheckedSideEffectImports": false,
 
 		/* Paths */
+		"ignoreDeprecations": "5.0",
 		"baseUrl": ".",
 		"paths": {
 			"@/*": ["./src/*"]
